# animal-chess-2D

./: README.md  pyproject.toml
src/: constants.py  main.py
src/ai/: mcts.py  minimax.py
src/core/: game.py  map.py  piece.py  state.py
src/server/: controller.py  index.py  server.py
